# bowel_sound_app_COMPLETE

./: .gitignore  README.md  SETUP_GUIDE.md  app.py  config.py  inference_server.py  pyproject.toml  requirements.txt
models/: README.md  crnn_best.keras  standardization_mean.npy  standardization_std.npy
modules/: __init__.py  audio_processor.py  evaluator.py  model_builder.py  predictor.py  visualizer.py
signal_processing/: __init__.py  analyzer.py  features.py  loader.py  preprocessing.py  visualizer.py
