[project]
name = "bowel-sound-detection"
version = "1.0.0"
description = "Streamlit application for bowel sound detection using deep learning"
authors = [{name = "Bowel Sound Detection Team"}]
requires-python = ">=3.9,<3.12"
dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


